--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,13 +10,14 @@
         "eslint:recommended"
     ],
     "parserOptions": {
-        "ecmaVersion": 12
+        "ecmaVersion": 12,
+        "sourceType": "module"
     },
     "rules": {
         "indent": [
             "error",
-            2
-        ], // 2 spaces
+            4
+        ], // 4 spaces
         "linebreak-style": [
             "error",
             "unix"
