--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
     "eslint": "^7.25.0",
+    "html-webpack-plugin": "^5.3.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
