--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "isotope-layout": "^3.0.6",
     "jquery": "^3.6.0",
     "jquery-bridget": "^3.0.0",
+    "mini-css-extract-plugin": "^1.5.0",
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
