--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "css-loader": "^5.2.4",
     "eslint": "^7.25.0",
     "file-loader": "^6.2.0",
+    "html-critical-webpack-plugin": "^2.1.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "image-minimizer-webpack-plugin": "^2.2.0",
