--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jquery-bridget": "^3.0.0",
     "mini-css-extract-plugin": "^1.5.0",
     "node-sass": "^5.0.0",
+    "purgecss-webpack-plugin": "^4.0.3",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.35.1",
