--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "file-loader": "^6.2.0",
     "html-critical-webpack-plugin": "^2.1.0",
     "html-loader": "^2.1.2",
+    "html-webpack-partials-plugin": "^0.8.0",
     "html-webpack-plugin": "^5.3.1",
     "image-minimizer-webpack-plugin": "^2.2.0",
     "imagemin-gifsicle": "^7.0.0",
